filesOwners API and Owners SR should read label config the same
If no label is configured in the owners file, we fall back to
Code-Review label by default. If Code-Review label is not configured for
that project, a rule evaluation error is throw.

Bug: Issue 402138566
Change-Id: Ia740fc81e6a91c6bf1c4182de3991f8940cd5c11